--- a/src/views/initialization/index.scss
+++ b/src/views/initialization/index.scss
@@ -33,7 +33,7 @@
         .left-con{
             margin-top: 180px;
         }
-        .btn-group{
+        .btn-group-init{
             overflow: hidden;
             margin-left: 50px;
             margin-top: 50px;
